# liteViT

./: .gitignore  .pre-commit-config.yaml  README.md  eval.py  pyproject.toml  sweep.py  train.py
.github/workflows/: ci.yaml  pytest.yml  static_analysis.yml
configs/: train.yaml
configs/callbacks/: default.yaml  no_checkpoint.yaml
configs/data/: cifar10.yaml  fashion_mnist.yaml  kmnist.yaml  mnist.yaml
configs/experiment/: fashion_mnist_init_sweep.yaml
configs/logger/: mlflow.yaml
configs/metrics/: classification.yaml
configs/model/: lite_comp_cifar10.yaml  lite_comparison.yaml  lite_experimental.yaml  lite_gqa_cifar10.yaml  lite_registers.yaml  lite_tiny.yaml  timm_comp_cifar10.yaml  timm_comparison.yaml  timm_experimental.yaml
configs/optimizer/: adam_w.yaml  comp_cifar10.yaml  comparison.yaml
configs/scheduler/: comp_cifar10.yaml  cosine.yaml  cosine_warmup.yaml
configs/trainer/: cifar10.yaml  default.yaml
litevit/: conf.py
litevit/data/: __init__.py  base.py  cifar10.py  fashion_mnist.py  kmnist.py  mnist.py  transform_dataset.py
litevit/models/: __init__.py  patch_embed.py  timm_vit.py  vit.py
litevit/training/: __init__.py  callbacks.py  module.py  utils.py
litevit/utils/: __init__.py  drop_path.py  pos_embed.py  utils.py
notebooks/: 01_mnist_smoke_test.ipynb
scripts/: collect_results.py  comparison.py
scripts/sweeps/: cifar10_init.py  fashion_mnist_init.py  template.py
tests/: conftest.py
tests/models/: test_patch_embed.py  test_vit.py
tests/training/: test_warmup_scheduler.py
tests/utils/: test_drop_path.py  (+1 more)
(+19 files in other folders)
