[project]
name = "litevit"
version = "0.1.0"
description = "Lightweight from-scratch ViT implementation with pluggable attention and transformer block variants."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "mlflow>=3.12.0",
    "omegaconf>=2.3.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.1",
    "optuna>=4.8.0",
    "optuna-dashboard>=0.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litevit"]

[dependency-groups]
comparison = [
    "timm",
]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N812", "N806"]
# E/W: pycodestyle, F: pyflakes, I: isort, N: naming conventions, UP: pyupgrade

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=litevit --cov-report=term-missing"
